[package]
authors     = ["Xavier Lau <x@acg.box>"]
description = "X/Twitter V2 API Library"
edition     = "2024"
homepage    = "https://hack.ink/xv2api"
license     = "GPL-3.0"
name        = "xv2api"
readme      = "README.md"
repository  = "https://github.com/hack-ink/xv2api"
resolver    = "3"
version     = "0.1.0"

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true

[dependencies]
# crates.io
oauth2      = { version = "5.0" }
reqwest     = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "rustls-tls"] }
serde       = { version = "1.0" }
serde_json  = { version = "1.0" }
thiserror   = { version = "2.0" }
tokio       = { version = "1.45", features = ["macros", "rt-multi-thread"] }
tracing     = { version = "0.1" }
urlencoding = { version = "2.1" }
